--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@react-three/drei": "^10.0.5",
     "@react-three/fiber": "^9.0.0",
+    "@sentry/nextjs": "^9.11.0",
     "@tabler/icons-react": "^3.31.0",
     "clsx": "^2.1.1",
     "mini-svg-data-uri": "^1.4.4",
